# ruleManager

./: .env.example  .gitignore  .npmrc.example  README.md  package-lock.json  package.json  pyproject.toml
apps/backend/: .env.example  package.json  tsconfig.json
apps/backend/prisma/: schema.prisma  seed.ts
apps/backend/prisma/migrations/20260214070000_init_foundation/: migration.sql
apps/backend/src/: config.ts  httpEtag.ts  index.ts
apps/backend/src/auth/: demoAuth.ts
apps/backend/src/rules/: ast.ts  description.ts  fieldCatalog.ts  ruleLogic.test.ts  service.ts
apps/backend/src/rulesets/: rulesets.test.ts  service.ts
apps/frontend/: index.html  package.json
apps/frontend/src/: App.tsx
apps/frontend/src/api/: client.ts
apps/frontend/src/components/: Layout.tsx  PermissionGate.tsx
apps/frontend/src/components/rules/: RuleAstBuilder.tsx  ruleAst.ts
apps/frontend/src/pages/: AuditLogPage.tsx  CombinedTablePage.tsx  RuleDetailPage.tsx  RulesListPage.tsx  RulesetDetailPage.tsx  RulesetsListPage.tsx
scripts/: check-npm-config.mjs  setup-npmrc.mjs
src/rule_manager/: __init__.py  __main__.py  core.py
tests/: test_core.py
