[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ruleManager"
version = "0.1.0"
description = "Starter Python project for managing rules"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "ruleManager contributors" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
